Fixed horizontal scroll bug

--- a/assets/styles/theme.css
+++ b/assets/styles/theme.css
@@ -9,7 +9,7 @@
 */
 
 .main {
-  width: 100vw;
+  width: 100%;
   min-height: 100vh;
   position: fixed;
   display: flex;
